cc_library(
    name = "glu",
    srcs = [
        "array/array.c",
        "avl/avl.c",
        "epd/epd.c",
        "error/error.c",
        "error/error.h",
        "graph/graph.c",
        "graph/graph_dfs.c",
        "graph/graph.h",
        "graph/graph_int.h",
        "graph/graph_s.c",
        "graph/graph_static.h",
        "graph/graph_static_int.h",
        "heap/heap.c",
        "heap/heap.h",
        "heap/heapInt.h",
        "list/list.c",
        "list/lsort.h",
        "mem/memblock.c",
        "mem/memint.h",
        "mem/memrec.c",
        "mem/memuser.h",
        "mtr/mtrBasic.c",
        "mtr/mtrGroup.c",
        "mtr/mtrInt.h",
        "sparse/cols.c",
        "sparse/matrix.c",
        "sparse/rows.c",
        "sparse/sparse.h",
        "sparse/sparse_int.h",
        "st/st.c",
        "util/cpu_stats.c",
        "util/cpu_time.c",
        "util/datalimit.c",
        "util/getopt.c",
        "util/pathsearch.c",
        "util/prtime.c",
        "util/qsort.c",
        "util/random.c",
        "util/safe_mem.c",
        "util/strsav.c",
        "util/texpand.c",
        "util/tmpfile.c",
        "var_set/var_set.c",
    ],
    hdrs = [
        "local_include/array.h",
        "local_include/avl.h",
        "local_include/epd.h",
        "local_include/list.h",
        "local_include/mtr.h",
        "local_include/st.h",
        "local_include/util.h",
        "local_include/var_set.h",
    ],
    strip_include_prefix = "local_include",
    local_defines = [
        "USE_MALLOC_FREE",
        "HAVE_ASSERT_H",
        "HAVE_STDARG_H",
        "HAVE_SYS_FILE_H",
        "HAVE_SYS_STAT_H",
        "STDC_HEADERS",
        "HAVE_GETENV",
        "HAVE_IEEE_754",
        "HAVE_STRCHR",
        "HAVE_STRSTR",
        "HAVE_STDARG_H",
        "HAVE_ERRNO_H",
        "HAVE_PWD_H",
        "HAVE_SYS_RESOURCE_H",
        "HAVE_SYS_TIME_H",
        "HAVE_SYS_TIMES_H",
        "HAVE_SYS_TYPES_H",
        "HAVE_UNISTD_H",
        "HAVE_GETRLIMIT",
        "HAVE_VALLOC",

        "SIZEOF_INT=4",
        "SIZEOF_LONG=4",
        "SIZEOF_VOID_P=8",
    ],
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "mdd",
    srcs = [
      "mdd/mdd_add.c",
      "mdd/mdd_andsmoot.c",
      "mdd/mdd_bund.c",
      "mdd/mdd_case.c",
      "mdd/mdd_cofactor.c",
      "mdd/mdd_consensus.c",
      "mdd/mdd_dot.c",
      "mdd/mdd_func1c.c",
      "mdd/mdd_func2.c",
      "mdd/mdd_func2c.c",
      "mdd/mdd_func2cmod.c",
      "mdd/mdd_func3.c",
      "mdd/mdd_ineq_s.c",
      "mdd/mdd_init.c",
      "mdd/mdd_intv.c",
      "mdd/mdd_iter.c",
      "mdd/mdd_literal.c",
      "mdd/mdd_mod.c",
      "mdd/mdd_quit.c",
      "mdd/mdd_search.c",
      "mdd/mdd_smooth.c",
      "mdd/mdd_substit.c",
      "mdd/mdd_support.c",
      "mdd/mdd_uminus.c",
      "mdd/mdd_util.c",
      "mdd/mvar2bdds.c",
    ],
    hdrs = [
        "local_include/bdd.h",
        "local_include/mdd.h",
    ],
    strip_include_prefix = "local_include",
    local_defines = [
        "USE_MALLOC_FREE",
        "HAVE_ASSERT_H",
        "HAVE_STDARG_H",
        "HAVE_SYS_FILE_H",
        "HAVE_SYS_STAT_H",
        "STDC_HEADERS",
        "HAVE_GETENV",
        "HAVE_IEEE_754",
        "HAVE_STRCHR",
        "HAVE_STRSTR",


        "HAVE_STDARG_H",
        "HAVE_ERRNO_H",
        "HAVE_PWD_H",
        "HAVE_SYS_RESOURCE_H",
        "HAVE_SYS_TIME_H",
        "HAVE_SYS_TIMES_H",
        "HAVE_SYS_TYPES_H",
        "HAVE_UNISTD_H",
        "HAVE_GETRLIMIT",
        "HAVE_VALLOC",

        "SIZEOF_INT=4",
        "SIZEOF_LONG=4",
        "SIZEOF_VOID_P=8",
    ],
    deps = [":glu"],
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "cu",
    srcs = [
        "cuBdd/cuddAddAbs.c",
        "cuBdd/cuddAddApply.c",
        "cuBdd/cuddAddFind.c",
        "cuBdd/cuddAddInv.c",
        "cuBdd/cuddAddIte.c",
        "cuBdd/cuddAddNeg.c",
        "cuBdd/cuddAddWalsh.c",
        "cuBdd/cuddAndAbs.c",
        "cuBdd/cuddAnneal.c",
        "cuBdd/cuddApa.c",
        "cuBdd/cuddAPI.c",
        "cuBdd/cuddApprox.c",
        "cuBdd/cuddBddAbs.c",
        "cuBdd/cuddBddCorr.c",
        "cuBdd/cuddBddIte.c",
        "cuBdd/cuddBridge.c",
        "cuBdd/cuddCache.c",
        "cuBdd/cuddCheck.c",
        "cuBdd/cuddClip.c",
        "cuBdd/cuddCof.c",
        "cuBdd/cuddCompose.c",
        "cuBdd/cuddDecomp.c",
        "cuBdd/cuddEssent.c",
        "cuBdd/cuddExact.c",
        "cuBdd/cuddExport.c",
        "cuBdd/cuddGenCof.c",
        "cuBdd/cuddGenetic.c",
        "cuBdd/cuddGroup.c",
        "cuBdd/cuddHarwell.c",
        "cuBdd/cuddInit.c",
        "cuBdd/cuddInteract.c",
        "cuBdd/cuddLCache.c",
        "cuBdd/cuddLevelQ.c",
        "cuBdd/cuddLinear.c",
        "cuBdd/cuddLiteral.c",
        "cuBdd/cuddMatMult.c",
        "cuBdd/cuddPriority.c",
        "cuBdd/cuddRead.c",
        "cuBdd/cuddRef.c",
        "cuBdd/cuddReorder.c",
        "cuBdd/cuddSat.c",
        "cuBdd/cuddSign.c",
        "cuBdd/cuddSolve.c",
        "cuBdd/cuddSplit.c",
        "cuBdd/cuddSubsetHB.c",
        "cuBdd/cuddSubsetSP.c",
        "cuBdd/cuddSymmetry.c",
        "cuBdd/cuddTable.c",
        "cuBdd/cuddUtil.c",
        "cuBdd/cuddWindow.c",
        "cuBdd/cuddZddCount.c",
        "cuBdd/cuddZddFuncs.c",
        "cuBdd/cuddZddGroup.c",
        "cuBdd/cuddZddIsop.c",
        "cuBdd/cuddZddLin.c",
        "cuBdd/cuddZddMisc.c",
        "cuBdd/cuddZddPort.c",
        "cuBdd/cuddZddReord.c",
        "cuBdd/cuddZddSetop.c",
        "cuBdd/cuddZddSymm.c",
        "cuBdd/cuddZddUtil.c",
        "cuPort/cuPort.c",
        "cuPort/cuPortInt.h",
        "cuPort/cuPortIter.c",
    ],
    hdrs = [
        "cuBdd/cuddInt.h",
        "cuBdd/cudd.h",
    ],
    strip_include_prefix = "cuBdd",
    local_defines = [
        "USE_MALLOC_FREE",
        "HAVE_ASSERT_H",
        "HAVE_STDARG_H",
        "HAVE_SYS_FILE_H",
        "HAVE_SYS_STAT_H",
        "STDC_HEADERS",
        "HAVE_GETENV",
        "HAVE_IEEE_754",
        "HAVE_STRCHR",
        "HAVE_STRSTR",

        "HAVE_STDARG_H",
        "HAVE_ERRNO_H",
        "HAVE_PWD_H",
        "HAVE_SYS_RESOURCE_H",
        "HAVE_SYS_TIME_H",
        "HAVE_SYS_TIMES_H",
        "HAVE_SYS_TYPES_H",
        "HAVE_UNISTD_H",
        "HAVE_VALLOC",
        "HAVE_GETRLIMIT",

        "SIZEOF_INT=4",
        "SIZEOF_LONG=4",
        "SIZEOF_VOID_P=8",
    ],
    deps = [":mdd"],
    visibility = ["//:__pkg__"],
)
