cmake_minimum_required(VERSION 2.8)

project(mdd-glu)

add_definitions(
  -DHAVE_ASSERT_H
  -DHAVE_ERRNO_H
  -DHAVE_GETENV
  -DHAVE_STRCHR
  -DHAVE_STDARG_H
  -DHAVE_SYS_FILE_H
  -DHAVE_SYS_STAT_H
  -DHAVE_UNISTD_H
  -DSTDC_HEADERS
  )

add_library(glu STATIC
  array/array.c
  avl/avl.c
  epd/epd.c
  error/error.c
  graph/graph.c
  graph/graph_dfs.c
  graph/graph_s.c
  heap/heap.c
  list/list.c
  mem/memblock.c
  mem/memrec.c
  mtr/mtrBasic.c
  mtr/mtrGroup.c
  sparse/cols.c
  sparse/matrix.c
  sparse/rows.c
  st/st.c
  util/cpu_stats.c
  util/cpu_time.c
  util/datalimit.c
  util/getopt.c
  util/pathsearch.c
  util/prtime.c
  util/qsort.c
  util/random.c
  util/safe_mem.c
  util/strsav.c
  util/texpand.c
  util/tmpfile.c
  var_set/var_set.c
  )
target_include_directories(glu PRIVATE
  array
  graph
  list
  st
  util
  )

add_library(mdd OBJECT
  mdd/mdd_add.c
  mdd/mdd_andsmoot.c
  mdd/mdd_bund.c
  mdd/mdd_case.c
  mdd/mdd_cofactor.c
  mdd/mdd_consensus.c
  mdd/mdd_dot.c
  mdd/mdd_func1c.c
  mdd/mdd_func2.c
  mdd/mdd_func2c.c
  mdd/mdd_func2cmod.c
  mdd/mdd_func3.c
  mdd/mdd_ineq_s.c
  mdd/mdd_init.c
  mdd/mdd_intv.c
  mdd/mdd_iter.c
  mdd/mdd_literal.c
  mdd/mdd_mod.c
  mdd/mdd_quit.c
  mdd/mdd_search.c
  mdd/mdd_smooth.c
  mdd/mdd_substit.c
  mdd/mdd_support.c
  mdd/mdd_uminus.c
  mdd/mdd_util.c
  mdd/mvar2bdds.c
  )
target_include_directories(mdd PRIVATE
  array
  avl
  epd
  bdd
  st
  util
  var_set
  )

add_library(cal STATIC
  $<TARGET_OBJECTS:mdd>
  calBdd/calApplyReduce.c
  calBdd/calAssociation.c
  calBdd/calBddCompose.c
  calBdd/calBddITE.c
  calBdd/calBddManager.c
  calBdd/calBddOp.c
  calBdd/calBddSatisfy.c
  calBdd/calBddSize.c
  calBdd/calBddSubstitute.c
  calBdd/calBddSupport.c
  calBdd/calBddSwapVars.c
  calBdd/calBddVarSubstitute.c
  calBdd/calBlk.c
  calBdd/cal.c
  calBdd/calCacheTableTwo.c
  calBdd/calDump.c
  calBdd/calGC.c
  calBdd/calHashTable.c
  calBdd/calHashTableOne.c
  calBdd/calHashTableThree.c
  calBdd/calInteract.c
  calBdd/calMem.c
  calBdd/calMemoryManagement.c
  calBdd/calPipeline.c
  calBdd/calPrint.c
  calBdd/calPrintProfile.c
  calBdd/calQuant.c
  calBdd/calReduce.c
  calBdd/calReorderBF.c
  calBdd/calReorderDF.c
  calBdd/calReorderUtil.c
  calBdd/calTerminal.c
  calBdd/calUtil.c
  calPort/calPort.c
  calPort/calPortIter.c
  )
target_include_directories(cal PRIVATE
  array
  avl
  bdd
  calBdd
  epd
  st
  util
  var_set
  )

add_library(cmu STATIC
  $<TARGET_OBJECTS:mdd>
  cmuBdd/bddapply.c
  cmuBdd/bddassoc.c
  cmuBdd/bddblk.c
  cmuBdd/bdd.c
  cmuBdd/bddcache.c
  cmuBdd/bddcmp.c
  cmuBdd/bddcomp.c
  cmuBdd/bddcproject.c
  cmuBdd/bdddump.c
  cmuBdd/bddhash.c
  cmuBdd/bdd_is_cube.c
  cmuBdd/bddmisc.c
  cmuBdd/bddprimes.c
  cmuBdd/bddprint.c
  cmuBdd/bddprprofile.c
  cmuBdd/bddqnt.c
  cmuBdd/bddreduce.c
  cmuBdd/bddrelprod.c
  cmuBdd/bddreorder.c
  cmuBdd/bddsat.c
  cmuBdd/bddsize.c
  cmuBdd/bddsupport.c
  cmuBdd/bddswap.c
  cmuBdd/bddunique.c
  cmuBdd/bddwarn.c
  cmuBdd/mtbdd.c
  cmuPort/cmuPort.c
  cmuPort/cmuPortIter.c
  )
target_include_directories(cmu PRIVATE
  array
  avl
  cmuBdd
  bdd
  epd
  mem
  st
  util
  var_set
  )

add_library(cu STATIC
  $<TARGET_OBJECTS:mdd>
  cuBdd/cuddAddAbs.c
  cuBdd/cuddAddApply.c
  cuBdd/cuddAddFind.c
  cuBdd/cuddAddInv.c
  cuBdd/cuddAddIte.c
  cuBdd/cuddAddNeg.c
  cuBdd/cuddAddWalsh.c
  cuBdd/cuddAndAbs.c
  cuBdd/cuddAnneal.c
  cuBdd/cuddApa.c
  cuBdd/cuddAPI.c
  cuBdd/cuddApprox.c
  cuBdd/cuddBddAbs.c
  cuBdd/cuddBddCorr.c
  cuBdd/cuddBddIte.c
  cuBdd/cuddBridge.c
  cuBdd/cuddCache.c
  cuBdd/cuddCheck.c
  cuBdd/cuddClip.c
  cuBdd/cuddCof.c
  cuBdd/cuddCompose.c
  cuBdd/cuddDecomp.c
  cuBdd/cuddEssent.c
  cuBdd/cuddExact.c
  cuBdd/cuddExport.c
  cuBdd/cuddGenCof.c
  cuBdd/cuddGenetic.c
  cuBdd/cuddGroup.c
  cuBdd/cuddHarwell.c
  cuBdd/cuddInit.c
  cuBdd/cuddInteract.c
  cuBdd/cuddLCache.c
  cuBdd/cuddLevelQ.c
  cuBdd/cuddLinear.c
  cuBdd/cuddLiteral.c
  cuBdd/cuddMatMult.c
  cuBdd/cuddPriority.c
  cuBdd/cuddRead.c
  cuBdd/cuddRef.c
  cuBdd/cuddReorder.c
  cuBdd/cuddSat.c
  cuBdd/cuddSign.c
  cuBdd/cuddSolve.c
  cuBdd/cuddSplit.c
  cuBdd/cuddSubsetHB.c
  cuBdd/cuddSubsetSP.c
  cuBdd/cuddSymmetry.c
  cuBdd/cuddTable.c
  cuBdd/cuddUtil.c
  cuBdd/cuddWindow.c
  cuBdd/cuddZddCount.c
  cuBdd/cuddZddFuncs.c
  cuBdd/cuddZddGroup.c
  cuBdd/cuddZddIsop.c
  cuBdd/cuddZddLin.c
  cuBdd/cuddZddMisc.c
  cuBdd/cuddZddPort.c
  cuBdd/cuddZddReord.c
  cuBdd/cuddZddSetop.c
  cuBdd/cuddZddSymm.c
  cuBdd/cuddZddUtil.c
  cuPort/cuPort.c
  cuPort/cuPortIter.c
  )
target_include_directories(cu PRIVATE
  array
  avl
  bdd
  cuBdd
  epd
  mtr
  st
  util
  var_set
  )
